--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mobx": "^6.4.2",
+    "mobx-react": "^7.3.0",
     "next": "12.1.0",
     "next-images": "^1.8.4",
     "react": "17.0.2",
