--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "framework/common/config.js"  ],
   "exclude": [
     "node_modules"
   ]
