--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "js-cookie": "^3.0.1",
     "keen-slider": "^6.6.14",
     "mobx": "^6.4.2",
     "mobx-react": "^7.3.0",
@@ -20,6 +21,7 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/styled-components": "^5.1.24",
