--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.29.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.5.1",
     "typescript": "^4.6.2"
   }
