--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-NEXT_PUBLIC_FRAMEWORK=shopify_local
+NEXT_PUBLIC_FRAMEWORK=shopify
 NEXT_PUBLIC_LOCAL_STORE_DOMAIN=http://localhost:4000/graphql
-NEXT_PUBLIC_SHOPIFY_STORE_DOMAIN=https://xyz.shopifystore.com
+NEXT_PUBLIC_SHOPIFY_STORE_DOMAIN=https://a5c3a7.myshopify.com/api/2022-07/graphql.json
+NEXT_PUBLIC_SHOPIFY_STOREFRONT_ACCESS_TOKEN=0b3d5f29ddba06a1a0c6d2d42258dc69
