--- a/package.json
+++ b/package.json
@@ -9,26 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "babel-preset-next": "^1.4.0",
+    "classnames": "^2.3.2",
     "js-cookie": "^3.0.1",
     "keen-slider": "^6.6.14",
     "mobx": "^6.4.2",
-    "mobx-react": "^7.3.0",
-    "next": "12.1.0",
+    "next": "^12.3.1",
     "next-images": "^1.8.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "styled-components": "^5.3.3",
+    "sass": "^1.55.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.3.6",
     "@types/js-cookie": "^3.0.2",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
-    "@types/styled-components": "^5.1.24",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
-    "babel-plugin-inline-react-svg": "^2.0.1",
     "deepmerge": "^4.2.2",
     "eslint": "^7.32.0",
     "eslint-config-next": "12.1.0",
