--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "open-browser": "start http://localhost:3000",
     "start": "next start",
     "lint": "next lint"
   },
