--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-image-zoom": "^1.3.1",
+    "react-image-zooom": "^1.1.0",
     "sass": "^1.55.0",
     "swr": "^1.3.0"
   },
