--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reach/menu-button": "^0.18.0",
     "babel-preset-next": "^1.4.0",
     "classnames": "^2.3.2",
     "js-cookie": "^3.0.1",
@@ -18,6 +19,7 @@
     "next": "^12.3.1",
     "next-images": "^1.8.4",
     "react": "17.0.2",
+    "react-detect-click-outside": "^1.1.7",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "sass": "^1.55.0",
