--- a/package.json
+++ b/package.json
@@ -10,17 +10,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reach/menu-button": "^0.18.0",
     "babel-preset-next": "^1.4.0",
     "classnames": "^2.3.2",
     "js-cookie": "^3.0.1",
     "keen-slider": "^6.6.14",
     "mobx": "^6.4.2",
-    "next": "^12.3.1",
+    "next": "^13.4.13",
     "next-images": "^1.8.4",
-    "react": "17.0.2",
+    "react": "^18.2.0",
     "react-detect-click-outside": "^1.1.7",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "sass": "^1.55.0",
     "swr": "^1.3.0"
@@ -35,7 +34,7 @@
     "@typescript-eslint/parser": "^5.13.0",
     "deepmerge": "^4.2.2",
     "eslint": "^7.32.0",
-    "eslint-config-next": "12.1.0",
+    "eslint-config-next": "^13.4.13",
     "eslint-config-prettier": "^8.4.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.4",
